--- a/app/src/main/res/layout/drop_down.xml
+++ b/app/src/main/res/layout/drop_down.xml
@@ -1,17 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/etItemLayout"
+    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:backgroundTint="@color/white"
+    android:textColorHint="#A1A1A1"
+    app:boxStrokeColor="@color/black"
+    app:boxStrokeWidth="1dp"
+    app:endIconMode="dropdown_menu"
+    app:endIconTint="@color/black"
+    app:errorEnabled="true">
 
     <AutoCompleteTextView
+        android:id="@+id/etItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:backgroundTint="@color/white"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        tools:ignore="LabelFor" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.textfield.TextInputLayout>
+
